--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.9.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-elfsight-reviews": "^1.0.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
